@@ -11,6 +11,8 @@ import io.swagger.v3.core.converter.ModelConverters;
 import io.swagger.v3.core.converter.ResolvedSchema;
 import io.swagger.v3.core.util.AnnotationsUtils;
 import io.swagger.v3.core.util.Json;
+import io.swagger.v3.core.util.Json31;
+import io.swagger.v3.core.util.KotlinDetector;
 import io.swagger.v3.core.util.ParameterProcessor;
 import io.swagger.v3.core.util.PathUtils;
 import io.swagger.v3.core.util.ReflectionUtils;
@@ -51,6 +53,7 @@ import javax.ws.rs.ApplicationPath;
 import javax.ws.rs.Consumes;
 import javax.ws.rs.Produces;
 import javax.ws.rs.core.Application;
+import java.io.IOException;
 import java.lang.annotation.Annotation;
 import java.lang.reflect.Method;
 import java.lang.reflect.ParameterizedType;
@@ -69,6 +72,7 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.TreeSet;
+import java.util.concurrent.CompletionStage;
 import java.util.stream.Collectors;
 
 public class Reader implements OpenApiReader {
@@ -85,6 +89,8 @@ public class Reader implements OpenApiReader {
     private Paths paths;
     private Set<Tag> openApiTags;
 
+    private String defaultResponseKey = ApiResponses.DEFAULT;
+
     private static final String GET_METHOD = "get";
     private static final String POST_METHOD = "post";
     private static final String PUT_METHOD = "put";
@@ -95,26 +101,37 @@ public class Reader implements OpenApiReader {
     private static final String OPTIONS_METHOD = "options";
 
     public Reader() {
-        this.openAPI = new OpenAPI();
-        paths = new Paths();
-        openApiTags = new LinkedHashSet<>();
-        components = new Components();
-
+        this(new OpenAPI(), new Paths(), new LinkedHashSet<>(), new Components());
     }
 
     public Reader(OpenAPI openAPI) {
-        this();
-        setConfiguration(new SwaggerConfiguration().openAPI(openAPI));
+        this(openAPI, new Paths(), new LinkedHashSet<>(), new Components());
     }
 
     public Reader(OpenAPIConfiguration openApiConfiguration) {
-        this();
-        setConfiguration(openApiConfiguration);
+        this(new OpenAPI(), new Paths(), new LinkedHashSet<>(), new Components(), openApiConfiguration);
     }
+
+    protected Reader(OpenAPI openAPI, Paths paths, Set<Tag> openApiTags, Components components) {
+        this(openAPI, paths, openApiTags, components, new SwaggerConfiguration().openAPI(openAPI));
+    }
+
+    protected Reader(OpenAPI openAPI, Paths paths, Set<Tag> openApiTags, Components components, OpenAPIConfiguration openApiConfiguration) {
+        this.openAPI = openAPI;
+        this.paths = paths;
+        this.openApiTags = openApiTags;
+        this.components = components;
+        setConfiguration(openApiConfiguration);
+
+    }
+
 
     public OpenAPI getOpenAPI() {
         return openAPI;
     }
+    protected Set<Tag> getOpenApiTags() { return openApiTags; }
+    protected  Components getComponents() { return components; }
+    protected Paths getPaths() { return paths; }
 
     /**
      * Scans a single class for Swagger annotations - does not invoke ReaderListeners
@@ -132,6 +149,7 @@ public class Reader implements OpenApiReader {
      * @return the generated OpenAPI definition
      */
     public OpenAPI read(Set<Class<?>> classes) {
+
         Set<Class<?>> sortedClasses = new TreeSet<>((class1, class2) -> {
             if (class1.equals(class2)) {
                 return 0;
@@ -146,12 +164,22 @@ public class Reader implements OpenApiReader {
 
         Map<Class<?>, ReaderListener> listeners = new HashMap<>();
 
+        String appPath = "";
+
         for (Class<?> cls : sortedClasses) {
             if (ReaderListener.class.isAssignableFrom(cls) && !listeners.containsKey(cls)) {
                 try {
-                    listeners.put(cls, (ReaderListener) cls.newInstance());
+                    listeners.put(cls, (ReaderListener) cls.getDeclaredConstructor().newInstance());
                 } catch (Exception e) {
                     LOGGER.error("Failed to create ReaderListener", e);
+                }
+            }
+            if (config != null && Boolean.TRUE.equals(config.isAlwaysResolveAppPath()) && !Boolean.TRUE.equals(config.isSkipResolveAppPath())) {
+                if (Application.class.isAssignableFrom(cls)) {
+                    ApplicationPath appPathAnnotation = ReflectionUtils.getAnnotation(cls, ApplicationPath.class);
+                    if (appPathAnnotation != null) {
+                        appPath = appPathAnnotation.value();
+                    }
                 }
             }
         }
@@ -163,9 +191,13 @@ public class Reader implements OpenApiReader {
                 LOGGER.error("Unexpected error invoking beforeScan listener [" + listener.getClass().getName() + "]", e);
             }
         }
+        String appPathRuntime = resolveApplicationPath();
+        if (StringUtils.isNotBlank(appPathRuntime)) {
+            appPath = appPathRuntime;
+        }
 
         for (Class<?> cls : sortedClasses) {
-            read(cls, resolveApplicationPath(), null, false, null, null, new LinkedHashSet<String>(), new ArrayList<Parameter>(), new HashSet<Class<?>>());
+            read(cls, appPath, null, false, null, null, new LinkedHashSet<String>(), new ArrayList<Parameter>(), new HashSet<Class<?>>());
         }
 
         for (ReaderListener listener : listeners.values()) {
@@ -188,6 +220,10 @@ public class Reader implements OpenApiReader {
                     this.components = this.openAPI.getComponents();
                 }
             }
+            if (StringUtils.isNotBlank(openApiConfiguration.getOpenAPIVersion())) {
+                this.openAPI.openapi(openApiConfiguration.getOpenAPIVersion());
+            }
+            this.defaultResponseKey = StringUtils.isBlank(config.getDefaultResponseCode()) ? ApiResponses.DEFAULT : config.getDefaultResponseCode();
         }
     }
 
@@ -197,7 +233,7 @@ public class Reader implements OpenApiReader {
     }
 
     protected String resolveApplicationPath() {
-        if (application != null) {
+        if (application != null && !Boolean.TRUE.equals(config.isSkipResolveAppPath())) {
             Class<?> applicationToScan = this.application.getClass();
             ApplicationPath applicationPath;
             //search up in the hierarchy until we find one with the annotation, this is needed because for example Weld proxies will not have the annotation and the right class will be the superClass
@@ -231,8 +267,6 @@ public class Reader implements OpenApiReader {
                     }
                     m = innerApp.getClass().getMethod("getApplication");
                 }
-            } catch (NoSuchMethodException e) {
-                // no inner application found
             } catch (Exception e) {
                 // no inner application found
             }
@@ -253,6 +287,17 @@ public class Reader implements OpenApiReader {
         Hidden hidden = cls.getAnnotation(Hidden.class);
         // class path
         final javax.ws.rs.Path apiPath = ReflectionUtils.getAnnotation(cls, javax.ws.rs.Path.class);
+        final boolean openapi31 = Boolean.TRUE.equals(config.isOpenAPI31());
+
+        if (
+                openapi31 &&
+                (
+                        config.getOpenAPI() == null ||
+                        config.getOpenAPI().getOpenapi() == null ||
+                        config.getOpenAPI().getOpenapi().startsWith("3.0")
+                ) && config.getOpenAPIVersion() == null) {
+            openAPI.setOpenapi("3.1.0");
+        }
 
         if (hidden != null) { //  || (apiPath == null && !isSubresource)) {
             return openAPI;
@@ -263,6 +308,8 @@ public class Reader implements OpenApiReader {
         List<io.swagger.v3.oas.annotations.security.SecurityScheme> apiSecurityScheme = ReflectionUtils.getRepeatableAnnotations(cls, io.swagger.v3.oas.annotations.security.SecurityScheme.class);
         List<io.swagger.v3.oas.annotations.security.SecurityRequirement> apiSecurityRequirements = ReflectionUtils.getRepeatableAnnotations(cls, io.swagger.v3.oas.annotations.security.SecurityRequirement.class);
 
+        io.swagger.v3.oas.annotations.Webhooks webhooksAnnotation = ReflectionUtils.getAnnotation(cls, io.swagger.v3.oas.annotations.Webhooks.class);
+
         ExternalDocumentation apiExternalDocs = ReflectionUtils.getAnnotation(cls, ExternalDocumentation.class);
         io.swagger.v3.oas.annotations.tags.Tag[] apiTags = ReflectionUtils.getRepeatableAnnotationsArray(cls, io.swagger.v3.oas.annotations.tags.Tag.class);
         io.swagger.v3.oas.annotations.servers.Server[] apiServers = ReflectionUtils.getRepeatableAnnotationsArray(cls, io.swagger.v3.oas.annotations.servers.Server.class);
@@ -270,7 +317,8 @@ public class Reader implements OpenApiReader {
         javax.ws.rs.Consumes classConsumes = ReflectionUtils.getAnnotation(cls, javax.ws.rs.Consumes.class);
         javax.ws.rs.Produces classProduces = ReflectionUtils.getAnnotation(cls, javax.ws.rs.Produces.class);
 
-        boolean classDeprecated = ReflectionUtils.getAnnotation(cls, Deprecated.class) != null;
+        boolean classDeprecated = ReflectionUtils.getAnnotation(cls, Deprecated.class) != null
+                || (KotlinDetector.isKotlinPresent() && ReflectionUtils.getAnnotation(cls, KotlinDetector.getKotlinDeprecated()) != null);
 
         // OpenApiDefinition
         OpenAPIDefinition openAPIDefinition = ReflectionUtils.getAnnotation(cls, OpenAPIDefinition.class);
@@ -301,7 +349,7 @@ public class Reader implements OpenApiReader {
             // OpenApiDefinition extensions
             if (openAPIDefinition.extensions().length > 0) {
                 openAPI.setExtensions(AnnotationsUtils
-                        .getExtensions(openAPIDefinition.extensions()));
+                        .getExtensions(openapi31, openAPIDefinition.extensions()));
             }
 
         }
@@ -314,7 +362,7 @@ public class Reader implements OpenApiReader {
                     Map<String, SecurityScheme> securitySchemeMap = new HashMap<>();
                     if (StringUtils.isNotBlank(securityScheme.get().key)) {
                         securitySchemeMap.put(securityScheme.get().key, securityScheme.get().securityScheme);
-                        if (components.getSecuritySchemes() != null && components.getSecuritySchemes().size() != 0) {
+                        if (components.getSecuritySchemes() != null && !components.getSecuritySchemes().isEmpty()) {
                             components.getSecuritySchemes().putAll(securitySchemeMap);
                         } else {
                             components.setSecuritySchemes(securitySchemeMap);
@@ -365,12 +413,17 @@ public class Reader implements OpenApiReader {
 
 
         JavaType classType = TypeFactory.defaultInstance().constructType(cls);
-        BeanDescription bd = Json.mapper().getSerializationConfig().introspect(classType);
+        BeanDescription bd;
+        if (openapi31) {
+            bd = Json31.mapper().getSerializationConfig().introspect(classType);
+        } else {
+            bd = Json.mapper().getSerializationConfig().introspect(classType);
+        }
 
         final List<Parameter> globalParameters = new ArrayList<>();
 
         // look for constructor-level annotated properties
-        globalParameters.addAll(ReaderUtils.collectConstructorParameters(cls, components, classConsumes, null));
+        globalParameters.addAll(ReaderUtils.collectConstructorParameters(cls, components, classConsumes, null, config.getSchemaResolution(), openapi31));
 
         // look for field-level annotated properties
         globalParameters.addAll(ReaderUtils.collectFieldParameters(cls, components, classConsumes, null));
@@ -394,7 +447,8 @@ public class Reader implements OpenApiReader {
                 continue;
             }
 
-            boolean methodDeprecated = ReflectionUtils.getAnnotation(method, Deprecated.class) != null;
+            boolean methodDeprecated = ReflectionUtils.getAnnotation(method, Deprecated.class) != null
+                    || (KotlinDetector.isKotlinPresent() && ReflectionUtils.getAnnotation(method, KotlinDetector.getKotlinDeprecated()) != null);
 
             javax.ws.rs.Path methodPath = ReflectionUtils.getAnnotation(method, javax.ws.rs.Path.class);
 
@@ -545,7 +599,7 @@ public class Reader implements OpenApiReader {
                     }
                     // if we have form parameters, need to merge them into single schema and use as request body..
                     if (!formParameters.isEmpty()) {
-                        Schema mergedSchema = new ObjectSchema();
+                        Schema<?> mergedSchema = new ObjectSchema();
                         Map<String, Encoding> encoding = new LinkedHashMap<>();
                         for (Parameter formParam: formParameters) {
                             if (formParam.getExplode() != null || (formParam.getStyle() != null) && Encoding.StyleEnum.fromString(formParam.getStyle().toString()) != null) {
@@ -558,7 +612,7 @@ public class Reader implements OpenApiReader {
                                 }
                                 encoding.put(formParam.getName(), e);
                             }
-                            mergedSchema.addProperties(formParam.getName(), formParam.getSchema());
+                            mergedSchema.addProperty(formParam.getName(), formParam.getSchema());
                             if (formParam.getSchema() != null &&
                                     StringUtils.isNotBlank(formParam.getDescription()) &&
                                     StringUtils.isBlank(formParam.getSchema().getDescription())) {
@@ -619,7 +673,7 @@ public class Reader implements OpenApiReader {
                         continue;
                     }
                     setPathItemOperation(pathItemObject, httpMethod, operation);
-
+                    applyPathParamsPatterns(operation, regexMap);
                     paths.addPathItem(operationPath, pathItemObject);
                     if (openAPI.getPaths() != null) {
                         this.paths.putAll(openAPI.getPaths());
@@ -628,6 +682,23 @@ public class Reader implements OpenApiReader {
                     openAPI.setPaths(this.paths);
 
                 }
+            }
+        }
+
+        if (webhooksAnnotation != null && webhooksAnnotation.value().length > 0) {
+            Map<String, PathItem> webhooks = new HashMap<>();
+            for (io.swagger.v3.oas.annotations.Webhook webhookAnnotation : webhooksAnnotation.value()) {
+                io.swagger.v3.oas.annotations.Operation apiOperation = webhookAnnotation.operation();
+                PathItem pathItemObject = new PathItem();
+                Operation operation = new Operation();
+
+                setOperationObjectFromApiOperationAnnotation(operation, apiOperation, null, classProduces, null, classConsumes, null);
+
+                pathItemObject.post(operation);
+                webhooks.put(webhookAnnotation.name(), pathItemObject);
+            }
+            if (!webhooks.isEmpty()) {
+                openAPI.setWebhooks(webhooks);
             }
         }
 
@@ -674,7 +745,21 @@ public class Reader implements OpenApiReader {
         }
     }
 
-    protected Content processContent(Content content, Schema schema, Consumes methodConsumes, Consumes classConsumes) {
+    protected void applyPathParamsPatterns(Operation operation, Map<String, String> patternsMap) {
+        if (operation.getParameters() == null) {
+            return;
+        }
+        operation.getParameters().stream()
+                .filter(p -> patternsMap.containsKey(p.getName()))
+                .filter(p -> "path".equals(p.getIn()))
+                .filter(p -> p.getSchema() != null)
+                .filter(p -> StringUtils.isBlank(p.getSchema().getPattern()))
+                .filter(p -> !Parameter.StyleEnum.MATRIX.equals(p.getStyle()))
+                .filter(p -> "string".equals(p.getSchema().getType()) || (p.getSchema().getTypes() != null && p.getSchema().getTypes().contains("string")))
+                .forEach(p -> p.getSchema().setPattern(patternsMap.get(p.getName())));
+    }
+
+    protected Content processContent(Content content, Schema<?> schema, Consumes methodConsumes, Consumes classConsumes) {
         if (content == null) {
             content = new Content();
         }
@@ -701,7 +786,7 @@ public class Reader implements OpenApiReader {
 
         io.swagger.v3.oas.annotations.parameters.RequestBody requestBodyAnnotation = getRequestBody(Arrays.asList(paramAnnotations));
         if (requestBodyAnnotation != null) {
-            Optional<RequestBody> optionalRequestBody = OperationParser.getRequestBody(requestBodyAnnotation, classConsumes, methodConsumes, components, jsonViewAnnotation);
+            Optional<RequestBody> optionalRequestBody = OperationParser.getRequestBody(requestBodyAnnotation, classConsumes, methodConsumes, components, jsonViewAnnotation, config.isOpenAPI31());
             if (optionalRequestBody.isPresent()) {
                 RequestBody requestBody = optionalRequestBody.get();
                 if (StringUtils.isBlank(requestBody.get$ref()) &&
@@ -714,18 +799,39 @@ public class Reader implements OpenApiReader {
                         requestBody.getContent() != null &&
                         !requestBody.getContent().isEmpty()) {
                     if (requestBodyParameter.getSchema() != null) {
-                        for (MediaType mediaType : requestBody.getContent().values()) {
+                        Map<String, MediaType> reresolvedMediaTypes = new LinkedHashMap<>();
+                        for (String key: requestBody.getContent().keySet()) {
+                            MediaType mediaType = requestBody.getContent().get(key);
                             if (mediaType.getSchema() == null) {
                                 if (requestBodyParameter.getSchema() == null) {
                                     mediaType.setSchema(new Schema());
                                 } else {
                                     mediaType.setSchema(requestBodyParameter.getSchema());
                                 }
+                            } else if (mediaType.getSchema() != null && requestBodyAnnotation.useParameterTypeSchema()) {
+                                if (requestBodyParameter.getSchema() != null) {
+                                    MediaType newMediaType = clone(mediaType);
+                                    Schema<?> parameterSchema = clone(requestBodyParameter.getSchema());
+                                    Optional<io.swagger.v3.oas.annotations.media.Content> content = Arrays.stream(requestBodyAnnotation.content()).filter(c -> c.mediaType().equals(key)).findFirst();
+                                    if (content.isPresent()) {
+                                        Optional<Schema> reResolvedSchema = AnnotationsUtils.getSchemaFromAnnotation(content.get().schema(), components, null, config.isOpenAPI31(), parameterSchema);
+                                        if (reResolvedSchema.isPresent()) {
+                                            parameterSchema = reResolvedSchema.get();
+                                        }
+                                        reResolvedSchema = AnnotationsUtils.getArraySchema(content.get().array(), components, null, config.isOpenAPI31(), parameterSchema);
+                                        if (reResolvedSchema.isPresent()) {
+                                            parameterSchema = reResolvedSchema.get();
+                                        }
+                                    }
+                                    newMediaType.schema(parameterSchema);
+                                    reresolvedMediaTypes.put(key, newMediaType);
+                                }
                             }
-                            if (StringUtils.isBlank(mediaType.getSchema().getType())) {
+                            if (StringUtils.isBlank(mediaType.getSchema().getType()) || requestBodyAnnotation.useParameterTypeSchema()) {
                                 mediaType.getSchema().setType(requestBodyParameter.getSchema().getType());
                             }
                         }
+                        requestBody.getContent().putAll(reresolvedMediaTypes);
                     }
                 }
                 operation.setRequestBody(requestBody);
@@ -753,7 +859,6 @@ public class Reader implements OpenApiReader {
                     isRequestBodyEmpty = false;
                 }
                 if (!isRequestBodyEmpty) {
-                    //requestBody.setExtensions(extensions);
                     operation.setRequestBody(requestBody);
                 }
             }
@@ -784,7 +889,7 @@ public class Reader implements OpenApiReader {
         return null;
     }
 
-    private void setMediaTypeToContent(Schema schema, Content content, String value) {
+    private void setMediaTypeToContent(Schema<?> schema, Content content, String value) {
         MediaType mediaTypeObject = new MediaType();
         mediaTypeObject.setSchema(schema);
         content.addMediaType(value, mediaTypeObject);
@@ -921,6 +1026,11 @@ public class Reader implements OpenApiReader {
         io.swagger.v3.oas.annotations.parameters.RequestBody apiRequestBody =
                 ReflectionUtils.getAnnotation(method, io.swagger.v3.oas.annotations.parameters.RequestBody.class);
 
+        io.swagger.v3.oas.annotations.responses.ApiResponse[] operationApiResponses = new io.swagger.v3.oas.annotations.responses.ApiResponse[] {};
+        if (apiOperation != null) {
+            operationApiResponses = apiOperation.responses();
+        }
+
         ExternalDocumentation apiExternalDocumentation = ReflectionUtils.getAnnotation(method, ExternalDocumentation.class);
 
         // callbacks
@@ -932,7 +1042,7 @@ public class Reader implements OpenApiReader {
                 callbacks.putAll(currentCallbacks);
             }
         }
-        if (callbacks.size() > 0) {
+        if (!callbacks.isEmpty()) {
             operation.setCallbacks(callbacks);
         }
 
@@ -985,7 +1095,7 @@ public class Reader implements OpenApiReader {
 
         // RequestBody in Method
         if (apiRequestBody != null && operation.getRequestBody() == null){
-            OperationParser.getRequestBody(apiRequestBody, classConsumes, methodConsumes, components, jsonViewAnnotation).ifPresent(
+            OperationParser.getRequestBody(apiRequestBody, classConsumes, methodConsumes, components, jsonViewAnnotation, config.isOpenAPI31()).ifPresent(
                     operation::setRequestBody);
         }
 
@@ -1001,7 +1111,9 @@ public class Reader implements OpenApiReader {
                     classProduces,
                     methodProduces,
                     components,
-                    jsonViewAnnotation
+                    jsonViewAnnotation,
+                    config.isOpenAPI31(),
+                    defaultResponseKey
             ).ifPresent(responses -> {
                 if (operation.getResponses() == null) {
                     operation.setResponses(responses);
@@ -1022,7 +1134,9 @@ public class Reader implements OpenApiReader {
                     classProduces,
                     methodProduces,
                     components,
-                    jsonViewAnnotation
+                    jsonViewAnnotation,
+                    config.isOpenAPI31(),
+                    defaultResponseKey
             ).ifPresent(responses -> {
                 if (operation.getResponses() == null) {
                     operation.setResponses(responses);
@@ -1067,34 +1181,35 @@ public class Reader implements OpenApiReader {
         Type returnType = method.getGenericReturnType();
 
         if (annotatedMethod != null && annotatedMethod.getType() != null) {
-            returnType = annotatedMethod.getType();
+            returnType = extractTypeFromMethod(annotatedMethod);
         }
 
         final Class<?> subResource = getSubResourceWithJaxRsSubresourceLocatorSpecs(method);
+        Schema returnTypeSchema = null;
         if (!shouldIgnoreClass(returnType.getTypeName()) && !method.getGenericReturnType().equals(subResource)) {
-            ResolvedSchema resolvedSchema = ModelConverters.getInstance().resolveAsResolvedSchema(new AnnotatedType(returnType).resolveAsRef(true).jsonViewAnnotation(jsonViewAnnotation));
+            ResolvedSchema resolvedSchema = ModelConverters.getInstance(config.toConfiguration()).resolveAsResolvedSchema(new AnnotatedType(returnType).resolveAsRef(true).jsonViewAnnotation(jsonViewAnnotation).components(components));
             if (resolvedSchema.schema != null) {
-                Schema returnTypeSchema = resolvedSchema.schema;
+                returnTypeSchema = resolvedSchema.schema;
                 Content content = new Content();
                 MediaType mediaType = new MediaType().schema(returnTypeSchema);
                 AnnotationsUtils.applyTypes(classProduces == null ? new String[0] : classProduces.value(),
                         methodProduces == null ? new String[0] : methodProduces.value(), content, mediaType);
                 if (operation.getResponses() == null) {
                     operation.responses(
-                            new ApiResponses()._default(
+                            new ApiResponses().addApiResponse(defaultResponseKey,
                                     new ApiResponse().description(DEFAULT_DESCRIPTION)
                                             .content(content)
                             )
                     );
                 }
-                if (operation.getResponses().getDefault() != null &&
-                        StringUtils.isBlank(operation.getResponses().getDefault().get$ref())) {
-                    if (operation.getResponses().getDefault().getContent() == null) {
-                        operation.getResponses().getDefault().content(content);
+                if (operation.getResponses().get(defaultResponseKey) != null &&
+                        StringUtils.isBlank(operation.getResponses().get(defaultResponseKey).get$ref())) {
+                    if (operation.getResponses().get(defaultResponseKey).getContent() == null) {
+                        operation.getResponses().get(defaultResponseKey).content(content);
                     } else {
-                        for (String key : operation.getResponses().getDefault().getContent().keySet()) {
-                            if (operation.getResponses().getDefault().getContent().get(key).getSchema() == null) {
-                                operation.getResponses().getDefault().getContent().get(key).setSchema(returnTypeSchema);
+                        for (String key : operation.getResponses().get(defaultResponseKey).getContent().keySet()) {
+                            if (operation.getResponses().get(defaultResponseKey).getContent().get(key).getSchema() == null) {
+                                operation.getResponses().get(defaultResponseKey).getContent().get(key).setSchema(returnTypeSchema);
                             }
                         }
                     }
@@ -1107,16 +1222,110 @@ public class Reader implements OpenApiReader {
             }
         }
         if (operation.getResponses() == null || operation.getResponses().isEmpty()) {
-            Content content = new Content();
-            MediaType mediaType = new MediaType();
-            AnnotationsUtils.applyTypes(classProduces == null ? new String[0] : classProduces.value(),
-                    methodProduces == null ? new String[0] : methodProduces.value(), content, mediaType);
+            Content content = resolveEmptyContent(classProduces, methodProduces);
 
             ApiResponse apiResponseObject = new ApiResponse().description(DEFAULT_DESCRIPTION).content(content);
-            operation.setResponses(new ApiResponses()._default(apiResponseObject));
+            operation.setResponses(new ApiResponses().addApiResponse(defaultResponseKey, apiResponseObject));
+        }
+        if (returnTypeSchema != null) {
+            resolveResponseSchemaFromReturnType(operation, classResponses, returnTypeSchema, classProduces, methodProduces);
+            if (apiResponses != null) {
+                resolveResponseSchemaFromReturnType(
+                        operation,
+                    apiResponses.toArray(
+                        new io.swagger.v3.oas.annotations.responses.ApiResponse[0]),
+                        returnTypeSchema,
+                        classProduces,
+                        methodProduces);
+            } else if (operationApiResponses != null && operationApiResponses.length > 0) {
+                resolveResponseSchemaFromReturnType(
+                        operation,
+                        operationApiResponses,
+                        returnTypeSchema,
+                        classProduces,
+                        methodProduces);
+            }
         }
 
+
         return operation;
+    }
+
+    private Type extractTypeFromMethod(AnnotatedMethod annotatedMethod) {
+        if(CompletionStage.class.isAssignableFrom(annotatedMethod.getType().getRawClass())) {
+            // CompletionStage's 1st generic type is the real return type.
+            return annotatedMethod.getType().getBindings().getBoundType(0);
+        }
+        return annotatedMethod.getType();
+    }
+
+    protected Content resolveEmptyContent(Produces classProduces, Produces methodProduces) {
+        Content content = new Content();
+        MediaType mediaType = new MediaType();
+        AnnotationsUtils.applyTypes(classProduces == null ? new String[0] : classProduces.value(),
+                methodProduces == null ? new String[0] : methodProduces.value(), content, mediaType);
+        return content;
+    }
+
+    private MediaType clone(MediaType mediaType) {
+        if(mediaType == null)
+            return mediaType;
+        try {
+            if(config.isOpenAPI31()) {
+                mediaType = Json31.mapper().readValue(Json31.pretty(mediaType), MediaType.class);
+            } else {
+                mediaType = Json.mapper().readValue(Json.pretty(mediaType), MediaType.class);
+            }
+        } catch (IOException e) {
+            LOGGER.error("Could not clone mediaType", e);
+        }
+        return mediaType;
+    }
+    private Schema<?> clone(Schema<?> schema) {
+        return AnnotationsUtils.clone(schema, config.isOpenAPI31());
+    }
+
+    protected void resolveResponseSchemaFromReturnType(
+            Operation operation,
+            io.swagger.v3.oas.annotations.responses.ApiResponse[] responses,
+            Schema<?> schema,
+            Produces classProduces, Produces methodProduces) {
+        if (responses != null) {
+            for (io.swagger.v3.oas.annotations.responses.ApiResponse response: responses) {
+                Map<String, MediaType> reresolvedMediaTypes = new LinkedHashMap<>();
+                if (response.useReturnTypeSchema()) {
+                    ApiResponse opResponse = operation.getResponses().get(response.responseCode());
+                    if (opResponse != null) {
+                        if (opResponse.getContent() != null) {
+                            for (String key : opResponse.getContent().keySet()) {
+                                MediaType mediaType = clone(opResponse.getContent().get(key));
+                                Schema<?> existingSchema = clone(schema);
+                                Optional<io.swagger.v3.oas.annotations.media.Content> content = Arrays.stream(response.content()).filter(c -> c.mediaType().equals(key)).findFirst();
+                                if (content.isPresent()) {
+                                    Optional<Schema> reResolvedSchema = AnnotationsUtils.getSchemaFromAnnotation(content.get().schema(), components, null, config.isOpenAPI31(), existingSchema);
+                                    if (reResolvedSchema.isPresent()) {
+                                        existingSchema = reResolvedSchema.get();
+                                    }
+                                    reResolvedSchema = AnnotationsUtils.getArraySchema(content.get().array(), components, null, config.isOpenAPI31(), existingSchema);
+                                    if (reResolvedSchema.isPresent()) {
+                                        existingSchema = reResolvedSchema.get();
+                                    }
+                                }
+                                mediaType.schema(existingSchema);
+                                reresolvedMediaTypes.put(key, mediaType);
+                            }
+                        } else {
+                            Content content = resolveEmptyContent(classProduces, methodProduces);
+                            for (MediaType mediaType : content.values()) {
+                                mediaType.schema(schema);
+                            }
+                            opResponse.content(content);
+                        }
+                        opResponse.getContent().putAll(reresolvedMediaTypes);
+                    }
+                }
+            }
+        }
     }
 
     private boolean shouldIgnoreClass(String className) {
@@ -1131,7 +1340,7 @@ public class Reader implements OpenApiReader {
         }
         ignore = rawClassName.startsWith("javax.ws.rs.");
         ignore = ignore || rawClassName.equalsIgnoreCase("void");
-        ignore = ignore || ModelConverters.getInstance().isRegisteredAsSkippedClass(rawClassName);
+        ignore = ignore || ModelConverters.getInstance(config.toConfiguration()).isRegisteredAsSkippedClass(rawClassName);
         return ignore;
     }
 
@@ -1205,7 +1414,7 @@ public class Reader implements OpenApiReader {
         }
     }
 
-    private void setOperationObjectFromApiOperationAnnotation(
+    protected void setOperationObjectFromApiOperationAnnotation(
             Operation operation,
             io.swagger.v3.oas.annotations.Operation apiOperation,
             Produces methodProduces,
@@ -1226,16 +1435,18 @@ public class Reader implements OpenApiReader {
             operation.setDeprecated(apiOperation.deprecated());
         }
 
+        final boolean openapi31 = Boolean.TRUE.equals(config.isOpenAPI31());
+
         ReaderUtils.getStringListFromStringArray(apiOperation.tags()).ifPresent(tags ->
             tags.stream()
                     .filter(t -> operation.getTags() == null || (operation.getTags() != null && !operation.getTags().contains(t)))
                     .forEach(operation::addTagsItem));
 
         if (operation.getExternalDocs() == null) { // if not set in root annotation
-            AnnotationsUtils.getExternalDocumentation(apiOperation.externalDocs()).ifPresent(operation::setExternalDocs);
+            AnnotationsUtils.getExternalDocumentation(apiOperation.externalDocs(), openapi31).ifPresent(operation::setExternalDocs);
         }
 
-        OperationParser.getApiResponses(apiOperation.responses(), classProduces, methodProduces, components, jsonViewAnnotation).ifPresent(responses -> {
+        OperationParser.getApiResponses(apiOperation.responses(), classProduces, methodProduces, components, jsonViewAnnotation, openapi31, defaultResponseKey).ifPresent(responses -> {
             if (operation.getResponses() == null) {
                 operation.setResponses(responses);
             } else {
@@ -1261,15 +1472,19 @@ public class Reader implements OpenApiReader {
 
         // RequestBody in Operation
         if (apiOperation.requestBody() != null && operation.getRequestBody() == null) {
-            OperationParser.getRequestBody(apiOperation.requestBody(), classConsumes, methodConsumes, components, jsonViewAnnotation).ifPresent(
+            OperationParser.getRequestBody(apiOperation.requestBody(), classConsumes, methodConsumes, components, jsonViewAnnotation, config.isOpenAPI31()).ifPresent(
                     operation::setRequestBody);
         }
 
         // Extensions in Operation
         if (apiOperation.extensions().length > 0) {
-            Map<String, Object> extensions = AnnotationsUtils.getExtensions(apiOperation.extensions());
+            Map<String, Object> extensions = AnnotationsUtils.getExtensions(openapi31, apiOperation.extensions());
             if (extensions != null) {
-                extensions.forEach(operation::addExtension);
+                if (openapi31) {
+                    extensions.forEach(operation::addExtension31);
+                } else {
+                    extensions.forEach(operation::addExtension);
+                }
             }
         }
     }
@@ -1331,7 +1546,11 @@ public class Reader implements OpenApiReader {
         final OpenAPIExtension extension = chain.next();
         LOGGER.debug("trying extension {}", extension);
 
-        return extension.extractParameters(annotations, type, typesToSkip, components, classConsumes, methodConsumes, true, jsonViewAnnotation, chain);
+        Schema.SchemaResolution curSchemaResolution = config.getSchemaResolution();
+        extension.setConfiguration(config.toConfiguration());
+        ResolvedParameter resolvedParameter = extension.extractParameters(annotations, type, typesToSkip, components, classConsumes, methodConsumes, true, jsonViewAnnotation, chain);
+        ((SwaggerConfiguration)config).setSchemaResolution(curSchemaResolution);
+        return resolvedParameter;
     }
 
     private Set<String> extractOperationIdFromPathItem(PathItem path) {
@@ -1364,34 +1583,37 @@ public class Reader implements OpenApiReader {
         if (components == null) {
             return true;
         }
-        if (components.getSchemas() != null && components.getSchemas().size() > 0) {
+        if (components.getSchemas() != null && !components.getSchemas().isEmpty()) {
             return false;
         }
-        if (components.getSecuritySchemes() != null && components.getSecuritySchemes().size() > 0) {
+        if (components.getSecuritySchemes() != null && !components.getSecuritySchemes().isEmpty()) {
             return false;
         }
-        if (components.getCallbacks() != null && components.getCallbacks().size() > 0) {
+        if (components.getCallbacks() != null && !components.getCallbacks().isEmpty()) {
             return false;
         }
-        if (components.getExamples() != null && components.getExamples().size() > 0) {
+        if (components.getExamples() != null && !components.getExamples().isEmpty()) {
             return false;
         }
-        if (components.getExtensions() != null && components.getExtensions().size() > 0) {
+        if (components.getExtensions() != null && !components.getExtensions().isEmpty()) {
             return false;
         }
-        if (components.getHeaders() != null && components.getHeaders().size() > 0) {
+        if (components.getHeaders() != null && !components.getHeaders().isEmpty()) {
             return false;
         }
-        if (components.getLinks() != null && components.getLinks().size() > 0) {
+        if (components.getLinks() != null && !components.getLinks().isEmpty()) {
             return false;
         }
-        if (components.getParameters() != null && components.getParameters().size() > 0) {
+        if (components.getParameters() != null && !components.getParameters().isEmpty()) {
             return false;
         }
-        if (components.getRequestBodies() != null && components.getRequestBodies().size() > 0) {
+        if (components.getRequestBodies() != null && !components.getRequestBodies().isEmpty()) {
             return false;
         }
-        if (components.getResponses() != null && components.getResponses().size() > 0) {
+        if (components.getResponses() != null && !components.getResponses().isEmpty()) {
+            return false;
+        }
+        if (components.getPathItems() != null && !components.getPathItems().isEmpty()) {
             return false;
         }
 
@@ -1421,7 +1643,15 @@ public class Reader implements OpenApiReader {
         this.application = application;
     }
 
+    /* Since 2.1.8 does nothing, as previous implementation maintained for ref in
+        `ignoreOperationPathStrict` was ignoring resources which would be ignored
+        due to other checks in Reader class.
+     */
     protected boolean ignoreOperationPath(String path, String parentPath) {
+        return false;
+    }
+
+    protected boolean ignoreOperationPathStrict(String path, String parentPath) {
 
         if (StringUtils.isBlank(path) && StringUtils.isBlank(parentPath)) {
             return true;
@@ -1430,7 +1660,7 @@ public class Reader implements OpenApiReader {
         } else if (StringUtils.isBlank(path) && StringUtils.isNotBlank(parentPath)) {
             return false;
         }
-        if (parentPath != null && !"".equals(parentPath) && !"/".equals(parentPath)) {
+        if (parentPath != null && !parentPath.isEmpty() && !"/".equals(parentPath)) {
             if (!parentPath.startsWith("/")) {
                 parentPath = "/" + parentPath;
             }
@@ -1438,7 +1668,7 @@ public class Reader implements OpenApiReader {
                 parentPath = parentPath.substring(0, parentPath.length() - 1);
             }
         }
-        if (path != null && !"".equals(path) && !"/".equals(path)) {
+        if (path != null && !path.isEmpty() && !"/".equals(path)) {
             if (!path.startsWith("/")) {
                 path = "/" + path;
             }
